--- a/index.html
+++ b/index.html
@@ -3,9 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>html_css-self_introduction</title>
+    <title>gong's self introduction</title>
   </head>
   <body>
-    <h1>Hi! I'm kyou!</h1>
+    <div class="header">
+      <img id="selfie" src="images/me.JPG">
+      <div id="greeting">
+        <h1>Hi ! I'm Gong</h1>
+        <h2>a software engineer in Tokyo 😆</h2>
+      </div>
+    </div>
+    <div class="section" id="career">
+      <h2 class="title">career</h2>
+      <div class="section-body">
+        <p>as an engineer</p>
+        <nl class="description"></nl>
+          <li>at my 3rd year of becoming a full stack software engineer</li>
+          <li>happy to find I've finally started to become full-fledged</li>
+          <li>recently solidifying the basics of each field, taking this excellent 
+            <a href="https://roadmap.sh/full-stack">full stack roadmap</a> as a reference
+          </li>
+          <li>started from frontend, 
+            <a href="https://www.youtube.com/watch?si=p1oZiCLz82XqjDoY&v=a_iQb1lnAEQ&feature=youtu.be">html & css</a>, 
+            and this is the 1st frontend project totally made by myself ! I feel so proud of me 🥳!!!
+          </li>
+        </nl>
+        <p>besides</p>
+        <nl>
+          <li>have a architecture master's degree 🏠 because I love making things 😆</li>
+          <li>aiming for FIRE (Financial Independence, Retire Early)💰</li>
+        </nl>
+      </div>
+    </div>
+    <div class="section" id="interests">
+      <div class="section-body">
+        <h2 class="title">interests</h2>
+        <div class="photos">
+          <div id="snake-img-box">
+            <div id="snake-img"></div>
+            <p class="img-description">(hover to see the snake)</p>
+          </div>
+          <img src="images/cat.JPG" alt="a cute cat">
+          <img src="images/plants.jpg" alt="many plants indoors">
+          <img src="images/grass.jpg" alt="grass and tent and blue sky">
+          <img src="images/travel_ose.jpeg" alt="forest and wooden roads of Oze National Park">
+        </div>
+        <nl class="description">
+          <li>biggest hobby is reading online novel. I've been reading about 15 million words of online novels every year,for more than 15 years📖</li>
+          <li>now have a cool Mexican black king snake😎 as my pet that I've wanted to get since high school</li>
+          <li>also like my friend's cat, he is so cute!🤩</li>
+          <li>keep a lot of plants because I like the feeling of being surrounded by plants indoors🪴</li>
+          <li>traveled several times recently. The Oze National Park I visited recently is very beautiful⛰️</li>
+          <li>like lying on the lawn and soaking up the sun🏝️</li>
+          <li>feel comfortable when I'm close to nature</li>
+          <li>I also like the convenience and comfort brought by technology, as well as products of people's unlimited imagination</li>
+          <li>as a feminist. I think about the injustices in society and strive to break free from the shackles of patriarchy, so that I and hopefully others too can live a happy and free life</li>
+        </nl>
+      </div>
+    </div>
   </body>
 </html>
