change locations of photos and their descriptions

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <div class="header">
       <img id="selfie" src="images/me.JPG">
       <div id="greeting">
-        <h1>Hi ! I'm Gong</h1>
-        <h2>a software engineer in Tokyo 😆</h2>
+        <h1>Hi ! I'm Gong 😆</h1>
+        <h2>a software engineer in Tokyo</h2>
       </div>
     </div>
     <div class="section" id="career">
@@ -21,10 +21,10 @@
           <li>at my 3rd year of becoming a full stack software engineer</li>
           <li>happy to find I've finally started to become full-fledged</li>
           <li>recently solidifying the basics of each field, taking this excellent 
-            <a href="https://roadmap.sh/full-stack">full stack roadmap</a> as a reference
+            <a href="https://roadmap.sh/full-stack" target="_blank">full stack roadmap</a> as a reference
           </li>
           <li>started from frontend, 
-            <a href="https://www.youtube.com/watch?si=p1oZiCLz82XqjDoY&v=a_iQb1lnAEQ&feature=youtu.be">html & css</a>, 
+            <a href="https://www.youtube.com/watch?si=p1oZiCLz82XqjDoY&v=a_iQb1lnAEQ&feature=youtu.be" target="_blank">html & css</a>, 
             and this is the 1st frontend project totally made by myself ! I feel so proud of me 🥳!!!
           </li>
         </nl>
@@ -39,24 +39,32 @@
       <div class="section-body">
         <h2 class="title">interests</h2>
         <div class="photos">
-          <div id="snake-img-box">
+          <div class="img-box">
             <div id="snake-img"></div>
-            <p class="img-description">(hover to see the snake)</p>
+            <p class="bold-img-description">(hover to see the snake)</p>
+            <p class="img-description">I have a cool Mexican black king snake as my pet 😎 that I've wanted to get since high school</p>
           </div>
-          <img src="images/cat.JPG" alt="a cute cat">
-          <img src="images/plants.jpg" alt="many plants indoors">
-          <img src="images/grass.jpg" alt="grass and tent and blue sky">
-          <img src="images/travel_ose.jpeg" alt="forest and wooden roads of Oze National Park">
+          <div class="img-box">
+            <img src="images/cat.JPG" alt="a cute cat">
+            <p class="img-description">I like my friend's cat, he is so cute 🤩!</p>
+          </div>
+          <div class="img-box">
+            <img src="images/plants.jpg" alt="many plants indoors">
+            <p class="img-description">I keep a lot of plants because I like the feeling of being surrounded by plants indoors🪴</p>
+          </div>
+          <div class="img-box">
+            <img src="images/grass.jpg" alt="grass and tent and blue sky">
+            <p class="img-description">I like lying on the lawn and soaking up the sun🏝️</p>
+          </div>
+          <div class="img-box">
+            <img src="images/travel_ose.jpeg" alt="forest and wooden roads of Oze National Park">
+            <p class="img-description">Of the places I've hiked recently, The Oze National Park is the most beautiful⛰️</p>
+          </div>
         </div>
         <nl class="description">
-          <li>biggest hobby is reading online novel. I've been reading about 15 million words of online novels every year,for more than 15 years📖</li>
-          <li>now have a cool Mexican black king snake😎 as my pet that I've wanted to get since high school</li>
-          <li>also like my friend's cat, he is so cute!🤩</li>
-          <li>keep a lot of plants because I like the feeling of being surrounded by plants indoors🪴</li>
-          <li>traveled several times recently. The Oze National Park I visited recently is very beautiful⛰️</li>
-          <li>like lying on the lawn and soaking up the sun🏝️</li>
-          <li>feel comfortable when I'm close to nature</li>
-          <li>I also like the convenience and comfort brought by technology, as well as products of people's unlimited imagination</li>
+          <li>biggest hobby is reading online novel. I've been reading about 15 million words of online novels every year, for more than 15 years📖</li>
+          <li>My hobbies change very quickly. Once I am interested in something, I will concentrate on it day and night until I become almost the top level among amateurs in a short period of time. I'm especially good at handwork</li>
+          <li>I enjoy time alone</li>
           <li>as a feminist. I think about the injustices in society and strive to break free from the shackles of patriarchy, so that I and hopefully others too can live a happy and free life</li>
         </nl>
       </div>
