文言微調整、selfieとgreetingを中央寄せにして、subtitle加工

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="section" id="career">
       <h2 class="title">career</h2>
       <div class="section-body">
-        <p>as an engineer</p>
+        <h4 class="subtitle">as an engineer</h4>
         <nl class="description"></nl>
           <li>at my 3rd year of becoming a full stack software engineer</li>
           <li>happy to find I've finally started to become full-fledged</li>
@@ -28,7 +28,7 @@
             and this is the 1st frontend project totally made by myself ! I feel so proud of me 🥳!!!
           </li>
         </nl>
-        <p>besides</p>
+        <h4 class="subtitle">besides</h4>
         <nl>
           <li>have a architecture master's degree 🏠 because I love making things 😆</li>
           <li>aiming for FIRE (Financial Independence, Retire Early)💰</li>
@@ -62,8 +62,8 @@
           </div>
         </div>
         <nl class="description">
-          <li>biggest hobby is reading online novel. I've been reading about 15 million words of online novels every year, for more than 15 years📖</li>
-          <li>My hobbies change very quickly. Once I am interested in something, I will concentrate on it day and night until I become almost the top level among amateurs in a short period of time. I'm especially good at handwork</li>
+          <li>my biggest hobby is reading online novel. I've been reading about 15 million words of online novels every year, for more than 15 years📖</li>
+          <li>other hobbies change quite fast. Once I am interested in something, I will concentrate on it day and night until I become almost the top level among amateurs in a short period of time. I'm especially good at handwork</li>
           <li>I enjoy time alone</li>
           <li>as a feminist. I think about the injustices in society and strive to break free from the shackles of patriarchy, so that I and hopefully others too can live a happy and free life</li>
         </nl>
