文言微調整

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h4 class="subtitle">as an engineer</h4>
         <nl class="description"></nl>
           <li>at my 3rd year of becoming a full stack software engineer</li>
-          <li>happy to find I've finally started to become full-fledged</li>
+          <li>very happy to find I've finally started to become full-fledged</li>
           <li>recently solidifying the basics of each field, taking this excellent 
             <a href="https://roadmap.sh/full-stack" target="_blank">full stack roadmap</a> as a reference
           </li>
@@ -42,7 +42,7 @@
           <div class="img-box">
             <div id="snake-img"></div>
             <p class="bold-img-description">(hover to see the snake)</p>
-            <p class="img-description">I have a cool Mexican black king snake as my pet 😎 that I've wanted to get since high school</p>
+            <p class="img-description">I have a cool Mexican black king snake as my pet 😎 that I've wanted since high school</p>
           </div>
           <div class="img-box">
             <img src="images/cat.JPG" alt="a cute cat">
@@ -50,7 +50,7 @@
           </div>
           <div class="img-box">
             <img src="images/plants.jpg" alt="many plants indoors">
-            <p class="img-description">I keep a lot of plants because I like the feeling of being surrounded by plants indoors🪴</p>
+            <p class="img-description">I have a lot of plants because I like being surrounded by plants indoors🪴</p>
           </div>
           <div class="img-box">
             <img src="images/grass.jpg" alt="grass and tent and blue sky">
