add github link, change imgs border radius

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <div class="header">
       <img id="selfie" src="images/me.JPG">
       <div id="greeting">
-        <h1>Hi ! I'm Gong 😆</h1>
-        <h2>a software engineer in Tokyo</h2>
+        <div id="greeting-text">
+          <h1>Hi ! I'm Gong 😆</h1>
+          <h2>a software engineer in Tokyo</h2>
+        </div>
+        <p id="sns-urls">
+          <a href="https://github.com/gong-xj" target="_blank"><img src="images/github.png"></a>
+        </p>
       </div>
     </div>
     <div class="section" id="career">
@@ -35,9 +40,9 @@
         </nl>
       </div>
     </div>
-    <div class="section" id="interests">
+    <div class="section" id="hobbies">
       <div class="section-body">
-        <h2 class="title">interests</h2>
+        <h2 class="title">hobbies</h2>
         <div class="photos">
           <div class="img-box">
             <div id="snake-img"></div>
