change hover imgs size

--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
   </head>
   <body>
     <div class="header">
-      <img id="selfie" src="images/me.JPG">
+      <div id="selfie-box">
+        <img id="selfie" src="images/me.JPG">
+      </div>
       <div id="greeting">
         <div id="greeting-text">
           <h1>Hi ! I'm Gong 😆</h1>
           <h2>a software engineer in Tokyo</h2>
         </div>
-        <p id="sns-urls">
-          <a href="https://github.com/gong-xj" target="_blank"><img src="images/github.png"></a>
-        </p>
+        <div id="sns-urls">
+          <a href="https://github.com/gong-xj" target="_blank">
+            <div id="github"></div>
+          </a>
+        </div>
       </div>
     </div>
     <div class="section" id="career">
