--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sometype+Mono:wght@400;700&display=swap" rel="stylesheet">
     <title>gong's self introduction</title>
   </head>
   <body>
@@ -51,7 +54,7 @@
           <div class="img-box">
             <div id="snake-img"></div>
             <p class="bold-img-description">(hover to see the snake)</p>
-            <p class="img-description">I have a cool Mexican black king snake as my pet 😎 that I've wanted since high school</p>
+            <p class="img-description">😎 I have a very cool Mexican black king snake names daifuku as my pet that I've wanted since high school</p>
           </div>
           <div class="img-box">
             <img src="images/cat.JPG" alt="a cute cat">
